# librdkafka

./: .travis.yml  CLAUDE.md  CMakeLists.txt  DESIGN_AWS_OAUTHBEARER_V1.md  DESIGN_PLUGIN_OAUTHBEARER_AWS.md  FLOW_AWS_GETWEBIDENTITYTOKEN_CONTAINERS.md  FLOW_AWS_GETWEBIDENTITYTOKEN_EC2.md  configure.librdkafka  vcpkg.json
.semaphore/: kafkatest-system-tests.yml  semaphore-integration.yml  semaphore.yml
examples/: rdkafka_example.c  rdkafka_performance.c
mklove/modules/: configure.libaws_cpp_sdk_sts  configure.libcurl
oauthbearer-aws/: CMakeLists.txt  Makefile  README.md  aws_sts_provider.cpp  aws_sts_provider.h  config.c  config.h  exports.list  plugin.c  rdkafka-oauthbearer-aws.pc.in  rdkafka_oauthbearer_aws.h
oauthbearer-aws/tests/: CMakeLists.txt  mock_http_server.cpp  mock_http_server.h  test_config.c  test_real_aws.c  test_sts_provider.cpp
packaging/nuget/: nugetpackage.py
packaging/tools/: start-kafka-docker.py
src/: CMakeLists.txt  Makefile  queue.h  rd.h  rdaddr.c  rdatomic.h  rdavg.h  rdavl.c  rdcrc32.c  rdgz.c  rdhttp.c  rdhttp.h  rdkafka.c  rdkafka.h  rdkafka_assignor.c  rdkafka_aws_credentials.c  rdkafka_aws_credentials.h  rdkafka_aws_sts.c  rdkafka_aws_sts.h  rdkafka_broker.c  rdkafka_cgrp.c  rdkafka_cgrp.h  rdkafka_conf.c  rdkafka_event.h  rdkafka_feature.c  rdkafka_fetcher.c  rdkafka_int.h  rdkafka_metadata.c  rdkafka_metadata_cache.c  rdkafka_mock.h  rdkafka_mock_handlers.c  rdkafka_mock_int.h  rdkafka_mock_sharegrp.c  rdkafka_msg.c  rdkafka_msg.h  rdkafka_op.c  rdkafka_partition.c  rdkafka_proto.h  rdkafka_queue.c  rdkafka_queue.h  (+19 more)
src-cpp/: rdkafkacpp.h
tests/: 0033-regex_subscribe.c  0042-many-topics.c  0052-msg_timestamps.c  0055-producer_latency.c  0126-oauthbearer_oidc.c  0170-share_consumer_subscription.c  0176-share_consumer_commit_sync.c  0178-share_consumer_close.c  CMakeLists.txt  run-all-tests.sh  test.c  test.h  testshared.h
tests/kafkatest/: Makefile  README.md  deploy.sh  globals.json
tests/kafkatest/ci/: run-system-tests.sh
tests/kafkatest/common/: common.c  common.h
tests/kafkatest/verifiable_consumer/: verifiable_consumer.c
tests/kafkatest/verifiable_producer/: verifiable_producer.c
tests/kafkatest/verifiable_share_consumer/: verifiable_share_consumer.c
win32/: librdkafka.sln  librdkafka.vcxproj  packages.config  setup-docker.ps1
win32/librdkafkacpp/: librdkafkacpp.vcxproj
win32/rdkafka_consumer_example_cpp/: rdkafka_consumer_example_cpp.vcxproj
win32/rdkafka_example/: rdkafka_example.vcxproj
win32/tests/: packages.config  tests.vcxproj
